# image-video-to-ascii

./: .gitignore  CMakeLists.txt  README.md  ascii.cpp  ascii_video.cpp
headers/: helpers.h  helpers.hpp  image.hpp  image_to_ascii.h  image_to_ascii.hpp  video_to_ascii.h  video_to_ascii.hpp
resources/: video2.webm
